<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">APPhysicsCalc</string>
    <string name="title">AP Physics Calculator</string>
    <string name="titlebar">AP Physics Calc</string>
    <string name="menu_settings">Settings</string>
    <string name="description">Select an equation</string>
    <string name="description2">Enter Known Data (Leave unknown variable blank, squares will be calculated for you)</string>
    <string name="kinematics">Newton + Kinematics</string>
    <string name="var">var</string>
    <string name="calculate">Calculate</string>
    <string name="answer">Answer</string>
    <string name="units">Units</string>
    <string name="eq1">d = v0 * t + 0.5 * a * t^2</string>
    <string name="eq2">vf = v0 + a * t</string>
    <string name="eq3">vf^2 = v0^2 + 2 * a * d</string>
    <string name="eq4">d = (v0 + vf)/ 2 * t</string>
    <string name="eqText">Equation Hurr</string>
    <string name="title_activity_calc">Calc</string>

</resources>