<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/chalkboardbackground"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".EqSelect" >
    
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="@string/title"
         android:textColor="#FFF"
         android:textSize="32sp"
         android:typeface="serif" />
     
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:paddingBottom="20dp"
         android:text="@string/description"
         android:textColor="#FFF"
         android:textSize="13sp"
         android:typeface="serif" />
     
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:gravity="center|center_vertical"
         android:orientation="vertical"
         android:paddingBottom="30dp" >

         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:orientation="horizontal"
             android:paddingTop="30dp" >

             <Button
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:onClick="startCalc"
                 android:text="@string/eq1"
                 android:textSize="14sp"
                 android:typeface="serif" />

             <Button
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:onClick="startCalc"
                 android:text="@string/eq2"
                 android:typeface="serif" />
         </LinearLayout>

         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:orientation="horizontal"
             android:paddingTop="30dp" >

             <Button
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:onClick="startCalc"
                 android:text="@string/eq3"
                 android:textSize="14sp"
                 android:typeface="serif" />

             <Button
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:onClick="startCalc"
                 android:text="@string/eq4"
                 android:typeface="serif" />
         </LinearLayout>
     </LinearLayout>
     
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:gravity="center|center_vertical"
         android:orientation="horizontal"
         android:paddingTop="30dp" >
	     
	     <TextView
	         android:layout_width="0dp"
	         android:layout_height="wrap_content"
	         android:text="@string/kinematics"
	         android:layout_weight="1"
	         android:gravity="center"
	         android:textStyle="italic"
	         android:textColor="#FFF"
	         android:textSize="32sp"
	         android:typeface="serif" />
	     
     </LinearLayout>
</LinearLayout>